k8s/job-seeker/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: main-application
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
        - name: backend
          image: registry.devnoneknow.online/nt548jenkins/job-seeker-server@sha256:251c8352e612a190d98c9f1aa20e04d1cce58a42621de1b477174a338348b177
          ports:
            - containerPort: 8080
