k8s/job-seeker/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: main-application
spec:
  selector:
      app: backend
  ports:
    - protocol: TCP
      port: 8800
      targetPort: 8800
  type: ClusterIP
